fix server bugs

--- a/node/package.json
+++ b/node/package.json
@@ -172,9 +172,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js",
-    "type": "module"
+    "start": "node src/server.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC"
