--- a/node/package.json
+++ b/node/package.json
@@ -46,6 +46,7 @@
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
     "dot-prop": "^5.3.0",
+    "dotenv": "^16.0.1",
     "duplexer3": "^0.1.4",
     "ee-first": "^1.1.1",
     "emoji-regex": "^8.0.0",
