--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node node/app.js",
+    "start": "node node/src/server.js",
     "dev": "nodemon dashboard/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
